Added websocket-connection code but still using the Node server mock. Still working on transferring to the new format.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/d3": "^4.5.0",
     "@types/jquery": "^2.0.34",
     "@types/react": "^0.14.53",
+    "@types/react-bootstrap": "0.0.47",
     "@types/react-dom": "^0.14.19",
     "@types/react-router": "^2.0.41",
     "@types/underscore": "^1.7.36",
@@ -29,6 +30,7 @@
     "jquery": "^3.1.1",
     "node-sass": "^4.1.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "sass-loader": "^4.1.1",
