--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run typings",
-    "typings": "typings install"
+    "typings": "typings install",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -27,25 +28,41 @@
     "ejs": "2.5.5",
     "express": "4.14.0",
     "file-loader": "0.9.0",
+    "jest": "^20.0.4",
     "jquery": "3.1.1",
     "node-sass": "4.1.1",
     "react": "15.4.1",
     "react-bootstrap": "0.30.8",
     "react-dom": "15.4.1",
-    "react-router": "3.0.0",
+    "react-router": "2.4.0",
     "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
     "underscore": "1.8.3",
     "webpack": "1.14.0"
   },
   "devDependencies": {
+    "@types/jest": "^20.0.8",
     "awesome-typescript-loader": "2.2.4",
     "babel-core": "6.21.0",
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
     "source-map-loader": "0.1.5",
+    "ts-jest": "^20.0.13",
     "ts-loader": "1.3.0",
     "typescript": "2.1.4",
     "webpack": "1.14.0"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   }
 }
