--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,6 @@ install:
 
 # Final script that starts the testing.
 script: npm test
+
+notifications:
+   slack: gridappsd-team:Wp4j5wiWtncKsrY6IVmgg7BR
