--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-core": "6.21.0",
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
+    "react-bootstrap": "^0.30.8",
     "source-map-loader": "0.1.5",
     "ts-jest": "^20.0.13",
     "ts-loader": "1.3.0",
