--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "ejs": "2.5.5",
     "express": "4.14.0",
     "file-loader": "0.9.0",
-    "jest": "^20.0.4",
     "jquery": "3.1.1",
     "node-sass": "4.1.1",
     "react": "15.4.1",
@@ -41,15 +40,16 @@
     "webpack": "1.14.0"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.8",
+    "jest": "^20.0.4",
+    "@types/history": "2.0.41",
+    "@types/geojson": "1.0.5",
     "awesome-typescript-loader": "2.2.4",
     "babel-core": "6.21.0",
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
-    "react-bootstrap": "^0.30.8",
     "source-map-loader": "0.1.5",
     "ts-jest": "^20.0.13",
-    "ts-loader": "1.3.0",
+    "ts-loader": "1.3.0", 
     "typescript": "2.1.4",
     "webpack": "1.14.0"
   }
