--- a/package.json
+++ b/package.json
@@ -4,53 +4,53 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "npm run typings",
-    "typings": "typings install",
+    "dev": "webpack-dev-server --progress --inline",
+    "webpack": "rm -rf dist && webpack --watch",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/backbone": "1.3.33",
-    "@types/bootstrap": "3.3.32",
-    "@types/d3": "4.5.0",
-    "@types/jquery": "2.0.34",
-    "@types/react": "0.14.53",
-    "@types/react-bootstrap": "0.0.47",
-    "@types/react-dom": "0.14.19",
-    "@types/react-router": "2.0.41",
-    "@types/underscore": "1.7.36",
-    "babel-core": "6.21.0",
     "backbone": "1.3.3",
     "bootstrap": "3.3.7",
-    "css-loader": "0.26.1",
-    "d3": "4.5.0",
+    "d3": "4.7.4",
     "ejs": "2.5.5",
     "express": "4.14.0",
-    "file-loader": "0.9.0",
     "jquery": "3.1.1",
-    "node-sass": "4.1.1",
-    "react": "15.4.1",
-    "react-bootstrap": "0.30.8",
-    "react-dom": "15.4.1",
-    "react-router": "2.4.0",
-    "sass-loader": "4.1.1",
-    "style-loader": "0.13.1",
-    "underscore": "1.8.3",
-    "webpack": "1.14.0"
+    "react": "^16.2.0",
+    "react-bootstrap": "0.31.5",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
-    "jest": "^20.0.4",
-    "@types/history": "2.0.41",
+    "@types/backbone": "1.3.33",
+    "@types/bootstrap": "3.3.35",
+    "@types/d3": "4.7.0",
     "@types/geojson": "1.0.5",
-    "awesome-typescript-loader": "2.2.4",
-    "babel-core": "6.21.0",
-    "babel-loader": "6.2.10",
-    "babel-preset-es2015": "6.18.0",
+    "@types/history": "^2.0.41",
+    "@types/jquery": "2.0.48",
+    "@types/react": "^16.0.28",
+    "@types/react-bootstrap": "0.31.8",
+    "@types/react-dom": "16.0.3",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/underscore": "1.7.36",
+    "awesome-typescript-loader": "3.4.1",
+    "css-loader": "0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "1.1.6",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^20.0.4",
+    "node-sass": "4.7.2",
+    "sass-loader": "6.0.6",
     "source-map-loader": "0.1.5",
+    "style-loader": "0.19.0",
     "ts-jest": "^20.0.13",
-    "ts-loader": "1.3.0", 
-    "typescript": "2.1.4",
-    "webpack": "1.14.0"
+    "typescript": "2.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   }
 }
