--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "rxjs": "^5.5.6",
     "underscore": "1.8.3"
   },
   "devDependencies": {
