--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,47 @@
-sudo: false
+# make use of vm's
+sudo: 'required'
 
-language: node_js
+# have the docker service set up (we'll
+# update it later)
+services:
+  - 'docker'
 
-node_js:
-  - "7"
+# prepare the machine before any code
+# installation scripts
+before_install:
+  - './.travis/main.sh'
+  
+script:
+  - './build-docker.sh -b'
 
-install: 
-  - npm install -g typescript
+# only execute the following instructions in
+# the case of a success (failing at this point
+# won't mark the build as a failure).
+# To have `DOCKER_USERNAME` and `DOCKER_PASSWORD`
+# filled you need to either use `travis`' cli 
+# and then `travis set ..` or go to the travis
+# page of your repository and then change the 
+# environment in the settings pannel.
+after_success:
+  - if [[ "$TRAVIS_BRANCH" == "test-autoviz" ]]; then
+      docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ;
+      ./build-docker.sh -p;
+    fi
 
-  - npm install -g typings
+# language: node_js
 
-  - npm install 
+# node_js:
+#   - "7"
 
-# Final script that starts the testing.
-script: npm test
+# install: 
+#   - npm install -g typescript
 
-notifications:
-   slack: gridappsd-team:Wp4j5wiWtncKsrY6IVmgg7BR
+#   - npm install -g typings
+
+#   - npm install 
+
+# # Final script that starts the testing.
+# script: npm test
+
+# notifications:
+#    slack: gridappsd-team:Wp4j5wiWtncKsrY6IVmgg7BR
