--- a/.travis.yml
+++ b/.travis.yml
@@ -23,25 +23,12 @@ script:
 # page of your repository and then change the 
 # environment in the settings pannel.
 after_success:
-  - if [[ "$TRAVIS_BRANCH" == "test-autoviz" ]]; then
+  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
       docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ;
       ./build-docker.sh -p;
     fi
 
-# language: node_js
-
-# node_js:
-#   - "7"
-
-# install: 
-#   - npm install -g typescript
-
-#   - npm install -g typings
-
-#   - npm install 
 
 # # Final script that starts the testing.
 # script: npm test
 
-# notifications:
-#    slack: gridappsd-team:Wp4j5wiWtncKsrY6IVmgg7BR
