--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stomp/stompjs": "^4.0.2",
     "backbone": "1.3.3",
     "bootstrap": "3.3.7",
     "d3": "4.7.4",
@@ -25,7 +26,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "rxjs": "^5.5.6",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "websocket": "^1.0.25"
   },
   "devDependencies": {
     "@types/backbone": "1.3.33",
@@ -38,6 +40,7 @@
     "@types/react-bootstrap": "0.31.8",
     "@types/react-dom": "16.0.3",
     "@types/react-router-dom": "^4.2.3",
+    "@types/stompjs": "^2.3.2",
     "@types/underscore": "1.7.36",
     "awesome-typescript-loader": "3.4.1",
     "css-loader": "0.28.9",
