--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@stomp/stompjs": "^4.0.2",
+    "@stomp/stompjs": "^4.0.2",  
     "backbone": "1.3.3",
     "bootstrap": "3.3.7",
     "d3": "4.7.4",
@@ -49,6 +49,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
     "node-sass": "4.7.2",
+    "react-json-viewer": "^1.7.1",
     "sass-loader": "6.0.6",
     "source-map-loader": "0.1.5",
     "style-loader": "0.19.0",
