--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --inline",
     "webpack": "rm -rf dist && webpack --watch",
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +32,7 @@
     "@types/backbone": "1.3.33",
     "@types/bootstrap": "3.3.35",
     "@types/d3": "4.7.0",
-    "@types/geojson": "1.0.5",
+    "@types/geojson": "^7946.0.2",
     "@types/history": "^2.0.41",
     "@types/jquery": "2.0.48",
     "@types/react": "^16.0.28",
