- Add power info to FEDDER_REG label - Not unsubscribing from model dictionary topic as soon as we receive data because we want to keep receiving the dictionary when we select a different mRID

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "webpack-dev-server --progress --inline",
-        "webpack": "rm -rf dist && webpack --watch",
+        "webpack": "rm -rf dist && webpack",
         "test": "jest"
     },
     "author": "",
