--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "^16.2.0",
         "react-bootstrap": "0.31.5",
         "react-dom": "^16.2.0",
+        "react-json-viewer": "^1.7.1",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
         "redux": "^3.7.2",
@@ -33,7 +34,8 @@
         "@types/backbone": "1.3.33",
         "@types/bootstrap": "3.3.35",
         "@types/d3": "4.7.0",
-        "@types/geojson": "1.0.5",
+        "@types/d3-geo": "^1.10.1",
+        "@types/geojson": "^7946.0.2",
         "@types/history": "^2.0.41",
         "@types/jquery": "2.0.48",
         "@types/react": "^16.0.28",
