- Update background color of tooltip - Add start script to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --progress --inline",
+        "start": "node server.js",
+        "dev": "webpack-dev-server --progress --inline",
         "build": "rm -rf dist && webpack"
     },
     "author": "",
