Updated travis builds to push all branches to dockerhub

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,10 @@ script:
 # page of your repository and then change the 
 # environment in the settings pannel.
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then
-      
-      if [ -n "$DOCKER_USERNAME" ] && [ -n "$DOCKER_PASSWORD" ]; then
+  - if [ -n "$DOCKER_USERNAME" ] && [ -n "$DOCKER_PASSWORD" ]; then
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ;
         ./.travis/build-docker.sh -p;
-      fi
     fi
-
 
 # # Final script that starts the testing.
 # script: npm test
