--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
         "react-dom": "^16.4.2",
         "react-json-viewer": "^1.7.1",
         "react-router-dom": "^4.3.1",
+        "react-table": "^6.8.6",
         "rxjs": "^6.2.2"
     },
     "devDependencies": {
         "@types/d3": "4.7.0",
         "@types/react": "^16.4.10",
         "@types/react-dom": "^16.0.7",
+        "@types/react-table": "^6.7.21",
         "@types/stompjs": "^2.3.2",
         "awesome-typescript-loader": "3.4.1",
         "css-loader": "0.28.11",
