--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node server.js",
         "launch": "webpack-dev-server --progress --inline",
-        "build": "rm -rf dist && webpack --env=production"
+        "build": "rm -rf dist && webpack --env=production --env.BUILD_VERSION"
     },
     "author": "",
     "license": "ISC",
