--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
         "file-loader": "1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "jest": "^20.0.4",
-        "node-sass": "4.9.0",
-        "sass-loader": "7.0.1",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^7.1.0",
         "source-map-loader": "0.1.5",
         "style-loader": "0.21.0",
         "typescript": "^3.0.1",
