--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/react-table": "^6.7.21",
         "@types/stompjs": "^2.3.2",
         "awesome-typescript-loader": "3.4.1",
+        "copy-webpack-plugin": "^1.1.0",
         "css-loader": "0.28.11",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "1.1.11",
