--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dependencies": {
         "@stomp/stompjs": "^4.0.2",
         "bootstrap": "^4.1.3",
-        "d3": "4.7.4",
+        "d3": "^5.12.0",
         "express": "4.14.0",
         "react": "^16.4.2",
         "react-bootstrap": "^0.32.3",
@@ -29,7 +29,8 @@
         "rxjs": "^6.2.2"
     },
     "devDependencies": {
-        "@types/d3": "4.7.0",
+        "@types/d3": "5.7.2",
+        "@types/node": "^12.12.7",
         "@types/react": "^16.4.10",
         "@types/react-dom": "^16.0.7",
         "@types/react-table": "^6.7.21",
@@ -48,7 +49,7 @@
         "source-map-loader": "0.1.5",
         "style-loader": "0.21.0",
         "tslint": "^5.18.0",
-        "typescript": "^3.0.1",
+        "typescript": "^3.7.2",
         "url-loader": "^2.2.0",
         "webpack": "3.10.0",
         "webpack-dev-server": "^2.9.7"
