--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@stomp/stompjs": "^4.0.2",
         "@types/socket.io-client": "^1.4.32",
+        "codemirror": "^5.51.0",
         "d3": "^5.12.0",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
@@ -26,6 +27,7 @@
         "socket.io-client": "^2.3.0"
     },
     "devDependencies": {
+        "@types/codemirror": "0.0.85",
         "@types/d3": "5.7.2",
         "@types/node": "^12.12.7",
         "@types/react": "^16.4.10",
