[GOSS-GridAPPS-D#1202] Render power flow direction indicators for transformers during a simulation

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,9 +27,9 @@
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "noImplicitAny": false,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "strictNullChecks": false,
         "suppressImplicitAnyIndexErrors": true
     },
