--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,8 +9,8 @@
             "@shared/*": [
                 "frontend/src/app/shared/*"
             ],
-            "@commons/*": [
-                "commons/*"
+            "@common/*": [
+                "common/*"
             ]
         },
         "lib": [
