--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --config webpack.development.config.js --progress --inline",
+        "start": "webpack-dev-server --config webpack.development.config.js --progress --inline --env.action",
         "build": "webpack --config webpack.production.config.js --env.build-version",
         "lint": "eslint . --ext .ts,.tsx"
     },
@@ -56,6 +56,7 @@
         "react-hot-loader": "^4.12.21",
         "sass-loader": "^9.0.2",
         "source-map-loader": "^1.0.1",
+        "style-loader": "^1.2.1",
         "terser-webpack-plugin": "^3.0.6",
         "tsconfig-paths-webpack-plugin": "^3.2.0",
         "tslint": "^6.1.2",
