--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,16 @@
     "license": "ISC",
     "dependencies": {
         "@stomp/stompjs": "^5.4.4",
-        "codemirror": "^5.55.0",
+        "codemirror": "^5.58.2",
         "d3": "^5.16.0",
+        "postcss": "^8.2.10",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-router-dom": "^5.2.0",
         "react-table": "^6.8.6",
         "rxjs": "^6.6.0",
-        "socket.io-client": "^2.4.0"
+        "socket.io-client": "^2.4.0",
+        "ssri": "^8.0.1"
     },
     "devDependencies": {
         "@babel/core": "^7.10.5",
@@ -46,7 +48,7 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.1.1",
-        "css-loader": "^3.6.0",
+        "css-loader": "^5.2.4",
         "eslint": "^7.4.0",
         "eslint-plugin-react": "^7.20.3",
         "file-loader": "^4.0.0",
