--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           BUILD_VERSION="${TIMESTAMP}_${GITHASH}${BRANCH:+:$TAG}"
           echo "BUILD_VERSION $BUILD_VERSION"
           echo "TAG ${IMAGE}:${TIMESTAMP}_${GITHASH}"
-          docker build --no-cache --rm=true --build-arg TIMESTAMP="${BUILD_VERSION}" -f Dockerfile.gridappsd_base -t ${IMAGE}:${TIMESTAMP}_${GITHASH} .
+          docker build --build-arg VERSION="${TAG}" --build-arg TIMESTAMP="${BUILD_VERSION}" -t ${IMAGE}:${TIMESTAMP}_${GITHASH} .
           status=$?
           if [ $status -ne 0 ]; then
             echo "Error: status $status"
