--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,7 @@
         "start": "node dist/src/index.js",
         "nodemon": "tsc --watch & nodemon dist/src/index.js",
         "debug": "node --inspect dist/src/index.js",
-        "lint": "eslint . --ext .ts && cd ../frontend && npm run lint"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run lint"
-        }
+        "lint": "eslint . --ext .ts"
     },
     "author": "Nhuy Van",
     "license": "ISC",
@@ -20,7 +15,7 @@
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "rxjs": "^6.5.3",
-        "socket.io": "^2.3.0"
+        "socket.io": "^2.4.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.2",
@@ -30,7 +25,6 @@
         "@typescript-eslint/eslint-plugin-tslint": "^3.6.1",
         "@typescript-eslint/parser": "^3.6.1",
         "eslint": "^7.4.0",
-        "husky": "^4.2.5",
         "nodemon": "^2.0.4",
         "tslint": "^6.1.2",
         "typescript": "^3.9.6"
