--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,19 +2,12 @@
     "name": "gridappsd-viz-frontend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --config webpack.development.config.js --progress --inline --env.action",
-        "build": "webpack --config webpack.production.config.js --env.build-version",
+        "start": "webpack serve --config webpack.development.config.js --progress --inline --env action",
+        "build": "webpack --config webpack.production.config.js --env placeholder",
         "lint": "eslint . --ext .ts,.tsx"
     },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run lint"
-        }
-    },
     "author": "Nhuy Van",
-    "license": "ISC",
     "dependencies": {
         "@stomp/stompjs": "^5.4.4",
         "codemirror": "^5.55.0",
@@ -42,30 +35,27 @@
         "@typescript-eslint/eslint-plugin": "^3.6.1",
         "@typescript-eslint/eslint-plugin-tslint": "^3.6.1",
         "@typescript-eslint/parser": "^3.6.1",
-        "awesome-typescript-loader": "^5.2.1",
         "babel-loader": "^8.1.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.1.1",
-        "css-loader": "^3.6.0",
-        "eslint": "^7.4.0",
-        "eslint-plugin-react": "^7.20.3",
-        "file-loader": "^4.0.0",
-        "html-webpack-plugin": "^4.3.0",
-        "husky": "^4.2.5",
-        "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.14.1",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
-        "react-hot-loader": "^4.12.21",
-        "sass-loader": "^9.0.2",
-        "source-map-loader": "^1.0.1",
-        "style-loader": "^1.2.1",
-        "terser-webpack-plugin": "^3.0.6",
-        "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "tslint": "^6.1.2",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "copy-webpack-plugin": "^9.0.1",
+        "css-loader": "^6.2.0",
+        "css-minimizer-webpack-plugin": "^3.0.2",
+        "eslint": "^7.32.0",
+        "eslint-plugin-react": "^7.24.0",
+        "html-webpack-plugin": "^5.3.2",
+        "mini-css-extract-plugin": "^2.2.0",
+        "node-sass": "^6.0.1",
+        "react-hot-loader": "^4.13.0",
+        "sass-loader": "^12.1.0",
+        "source-map-loader": "^3.0.0",
+        "style-loader": "^3.2.1",
+        "ts-loader": "^9.2.5",
+        "tsconfig-paths-webpack-plugin": "^3.5.1",
+        "tslint": "^6.1.3",
         "typescript": "^4.0.3",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack": "^5.49.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-sources": "^3.2.0"
     }
 }
