--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,17 +1,21 @@
 {
-    "env": {
-        "es6": true,
-        "node": true
+    "root": true,
+    "parserOptions": {
+        "project": "tsconfig.json"
     },
+    "env": {
+        "node": true,
+        "jest": true
+    },
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint",
+        "eslint-plugin-jsdoc"
+    ],
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
         "../.eslintrc.json"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint",
-        "@typescript-eslint/tslint"
     ]
 }
