--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,13 @@
         "@types/express": "^4.17.2",
         "@types/node": "^10.16.1",
         "@types/socket.io": "^2.1.4",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/eslint-plugin-tslint": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
-        "eslint": "^7.4.0",
+        "@typescript-eslint/eslint-plugin": "^4.28.5",
+        "@typescript-eslint/parser": "^4.28.5",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jsdoc": "^36.0.6",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint": "^7.31.0",
         "nodemon": "^2.0.4",
-        "tslint": "^6.1.2",
         "typescript": "^3.9.6"
     }
 }
