--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,15 +32,17 @@
         "@types/react-table": "^6.7.21",
         "@types/socket.io-client": "^1.4.33",
         "@types/stompjs": "^2.3.4",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/eslint-plugin-tslint": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
+        "@typescript-eslint/eslint-plugin": "^4.28.5",
+        "@typescript-eslint/parser": "^4.28.5",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
         "copy-webpack-plugin": "^9.0.1",
         "css-loader": "^6.2.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
-        "eslint": "^7.32.0",
+        "eslint": "^7.31.0",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jsdoc": "^36.0.6",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-react": "^7.24.0",
         "html-webpack-plugin": "^5.3.2",
         "mini-css-extract-plugin": "^2.2.0",
@@ -51,7 +53,6 @@
         "style-loader": "^3.2.1",
         "ts-loader": "^9.2.5",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
-        "tslint": "^6.1.3",
         "typescript": "^4.0.3",
         "webpack": "^5.49.0",
         "webpack-cli": "^4.7.2",
