- Upgrade Webpack to version 5 - Upgrade d3 to version 7 - Add lint-staged - Upgrade eslint

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,6 +4,12 @@
         "es6": true,
         "node": true
     },
+    "parserOptions": {
+        "project": [
+            "tsconfig.*?.json"
+        ],
+        "createDefaultProgram": true
+    },
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
@@ -14,7 +20,8 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
         "@typescript-eslint",
-        "@typescript-eslint/tslint"
+        "eslint-plugin-jsdoc",
+        "eslint-plugin-import"
     ],
     "settings": {
         "react": {
@@ -23,6 +30,23 @@
     },
     "rules": {
         "react/display-name": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-first-prop-new-line": [
+            "error",
+            "multiline-multiprop"
+        ],
+        "react/jsx-max-props-per-line": [
+            1,
+            {
+                "maximum": 1,
+                "when": "always"
+            }
+        ],
+        "jsx-quotes": [
+            "error",
+            "prefer-single"
+        ]
     }
 }
