--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,50 @@
 {
-    "parserOptions": {
-        "project": "./tsconfig.json",
-        "sourceType": "module"
+    "root": false,
+    "ignorePatterns": [
+        "*.js"
+    ],
+    "env": {
+        "es6": true,
+        "node": true
     },
     "rules": {
+        "@typescript-eslint/adjacent-overload-signatures": "error",
+        "@typescript-eslint/array-type": "off",
+        "@typescript-eslint/ban-types": [
+            "error",
+            {
+                "types": {
+                    "Object": {
+                        "message": "Avoid using the `Object` type. Did you mean `object`?"
+                    },
+                    "Function": {
+                        "message": "Avoid using the `Function` type. Prefer a specific function type, like `() => void`."
+                    },
+                    "Boolean": {
+                        "message": "Avoid using the `Boolean` type. Did you mean `boolean`?"
+                    },
+                    "Number": {
+                        "message": "Avoid using the `Number` type. Did you mean `number`?"
+                    },
+                    "String": {
+                        "message": "Avoid using the `String` type. Did you mean `string`?"
+                    },
+                    "Symbol": {
+                        "message": "Avoid using the `Symbol` type. Did you mean `symbol`?"
+                    }
+                }
+            }
+        ],
+        "@typescript-eslint/consistent-type-assertions": "error",
         "@typescript-eslint/consistent-type-definitions": "off",
         "@typescript-eslint/dot-notation": "off",
-        "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/explicit-member-accessibility": [
             "off",
             {
                 "accessibility": "explicit"
             }
         ],
-        "@typescript-eslint/indent": [
-            "error",
-            2
-        ],
+        "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/member-delimiter-style": [
             "error",
             {
@@ -31,13 +59,76 @@
             }
         ],
         "@typescript-eslint/member-ordering": "off",
-        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/naming-convention": [
+            "error",
+            {
+                "selector": "interface",
+                "format": [
+                    "PascalCase"
+                ],
+                "custom": {
+                    "regex": "^I[A-Z]",
+                    "match": false
+                }
+            },
+            {
+                "selector": [
+                    "classProperty",
+                    "classMethod",
+                    "parameterProperty"
+                ],
+                "format": [
+                    "camelCase"
+                ],
+                "leadingUnderscore": "require",
+                "modifiers": [
+                    "private"
+                ]
+            },
+            {
+                "selector": [
+                    "classProperty"
+                ],
+                "format": [
+                    "UPPER_CASE"
+                ],
+                "leadingUnderscore": "require",
+                "trailingUnderscore": "require",
+                "modifiers": [
+                    "private",
+                    "readonly",
+                    "static"
+                ]
+            }
+        ],
+        "@typescript-eslint/no-empty-function": "error",
         "@typescript-eslint/no-empty-interface": "off",
-        "@typescript-eslint/no-inferrable-types": "error",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-inferrable-types": [
+            "error",
+            {
+                "ignoreParameters": true
+            }
+        ],
         "@typescript-eslint/no-misused-new": "error",
+        "@typescript-eslint/no-namespace": "error",
         "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/no-parameter-properties": "off",
+        "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/no-unused-expressions": "error",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "^__.*?__$",
+                "varsIgnorePattern": "^__.*?__$"
+            }
+        ],
+        "@typescript-eslint/no-shadow": [
+            "error"
+        ],
+        "@typescript-eslint/prefer-for-of": "error",
         "@typescript-eslint/prefer-function-type": "error",
+        "@typescript-eslint/prefer-namespace-keyword": "error",
         "@typescript-eslint/quotes": [
             "error",
             "single"
@@ -46,24 +137,27 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/tslint/config": [
+        "@typescript-eslint/triple-slash-reference": [
             "error",
             {
-                "rules": {
-                    "import-spacing": true,
-                    "whitespace": true
-                }
+                "path": "always",
+                "types": "prefer-import",
+                "lib": "always"
             }
         ],
         "@typescript-eslint/type-annotation-spacing": "error",
         "@typescript-eslint/unified-signatures": "error",
-        "@typescript-eslint/ban-types": "off",
-        "arrow-body-style": "error",
+        "arrow-parens": [
+            "off",
+            "always"
+        ],
         "brace-style": [
             "error",
             "1tbs"
         ],
         "camelcase": "error",
+        "comma-dangle": "error",
+        "complexity": "error",
         "constructor-super": "error",
         "curly": "error",
         "eol-last": "error",
@@ -73,16 +167,84 @@
         ],
         "guard-for-in": "error",
         "id-blacklist": "off",
-        "id-match": "off",
+        "import/order": [
+            "error",
+            {
+                "newlines-between": "always",
+                "groups": [
+                    "builtin",
+                    "external",
+                    "internal",
+                    "parent",
+                    "sibling",
+                    "index",
+                    "object"
+                ],
+                "pathGroups": [
+                    {
+                        "pattern": "**/*.scss",
+                        "group": "sibling"
+                    },
+                    {
+                        "pattern": "@project:common/**",
+                        "group": "internal"
+                    },
+                    {
+                        "pattern": "@client:common/**",
+                        "group": "internal"
+                    },
+                    {
+                        "pattern": "@server:common/**",
+                        "group": "internal"
+                    },
+                    {
+                        "pattern": "@server:core",
+                        "group": "internal"
+                    },
+                    {
+                        "pattern": "@server:core/**",
+                        "group": "internal"
+                    }
+                ],
+                "pathGroupsExcludedImportTypes": [
+                    "builtin"
+                ]
+            }
+        ],
+        "jsdoc/check-alignment": "error",
+        "jsdoc/check-indentation": "error",
+        "jsdoc/newline-after-description": "error",
+        "jsdoc/no-types": "off",
+        "lines-between-class-members": [
+            "error",
+            "always",
+            {
+                "exceptAfterSingleLine": true
+            }
+        ],
+        "max-classes-per-file": "off",
         "max-len": [
             "off",
             {
                 "code": 140
             }
         ],
-        "no-bitwise": "off",
+        "new-parens": "error",
+        "no-bitwise": "error",
         "no-caller": "error",
-        "no-console": "error",
+        "no-console": [
+            "error",
+            {
+                "allow": [
+                    "error",
+                    "info",
+                    "warn"
+                ]
+            }
+        ],
+        "no-cond-assign": "error",
+        "no-invalid-this": "off",
+        "no-multiple-empty-lines": "off",
         "no-debugger": "error",
         "no-empty": "error",
         "no-eval": "error",
@@ -92,18 +254,30 @@
             "error",
             "rxjs/Rx"
         ],
-        "no-shadow": [
-            "error",
-            {
-                "hoist": "all"
-            }
-        ],
         "no-throw-literal": "error",
+        "no-trailing-spaces": "error",
         "no-undef-init": "error",
         "no-underscore-dangle": "off",
+        "no-unsafe-finally": "error",
         "no-unused-labels": "error",
+        "no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "^__.*?__$",
+                "varsIgnorePattern": "^__.*?__$"
+            }
+        ],
         "no-var": "error",
+        "object-shorthand": "error",
+        "one-var": [
+            "error",
+            "never"
+        ],
         "prefer-const": "error",
+        "quote-props": [
+            "error",
+            "as-needed"
+        ],
         "radix": "error",
         "spaced-comment": [
             "error",
@@ -113,6 +287,16 @@
                     "/"
                 ]
             }
-        ]
+        ],
+        "space-before-function-paren": [
+            "error",
+            {
+                "anonymous": "never",
+                "asyncArrow": "always",
+                "named": "never"
+            }
+        ],
+        "use-isnan": "error",
+        "valid-typeof": "error"
     }
 }
