--- a/backend/package.json
+++ b/backend/package.json
@@ -26,13 +26,17 @@
         "@types/express": "^4.17.2",
         "@types/node": "^10.16.1",
         "@types/socket.io": "^2.1.4",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/eslint-plugin-tslint": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
-        "eslint": "^7.4.0",
-        "husky": "^4.2.5",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
+        "eslint": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsdoc": "^37.0.3",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
         "nodemon": "^2.0.4",
-        "tslint": "^6.1.2",
-        "typescript": "^3.9.6"
+        "lint-staged": "^12.1.2",
+        "typescript": "^4.5.2"
+    },
+    "lint-staged": {
+        "**/*.ts": "eslint --cache --fix"
     }
 }
