--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --config webpack.development.config.js --progress --inline --env.action",
-        "build": "webpack --config webpack.production.config.js --env.build-version",
+        "start": "webpack serve --config webpack.development.config.js --progress --env action",
+        "build": "webpack --config webpack.production.config.js --env build-version",
         "lint": "eslint . --ext .ts,.tsx"
     },
     "husky": {
@@ -17,55 +17,57 @@
     "license": "ISC",
     "dependencies": {
         "@stomp/stompjs": "^5.4.4",
-        "codemirror": "^5.55.0",
-        "d3": "^5.16.0",
-        "react": "^16.4.2",
-        "react-dom": "^16.4.2",
-        "react-router-dom": "^5.2.0",
+        "codemirror": "^5.64.0",
+        "d3": "^7.1.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-router-dom": "^5.3.0",
         "react-table": "^6.8.6",
-        "rxjs": "^6.6.0",
-        "socket.io-client": "^2.3.0"
+        "rxjs": "^6.6.7",
+        "socket.io-client": "^2.4.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.5",
-        "@hot-loader/react-dom": "^16.13.0",
+        "@babel/core": "^7.16.0",
+        "@hot-loader/react-dom": "^16.14.0",
         "@ianwalter/exclude-assets-plugin": "^1.0.0",
-        "@types/codemirror": "0.0.96",
-        "@types/d3": "5.7.2",
-        "@types/node": "^12.12.7",
-        "@types/react": "^16.8.25",
-        "@types/react-dom": "^16.8.5",
-        "@types/react-router-dom": "^5.1.3",
-        "@types/react-table": "^6.7.21",
-        "@types/socket.io-client": "^1.4.33",
-        "@types/stompjs": "^2.3.4",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/eslint-plugin-tslint": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
-        "awesome-typescript-loader": "^5.2.1",
-        "babel-loader": "^8.1.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.1.1",
-        "css-loader": "^3.6.0",
-        "eslint": "^7.4.0",
-        "eslint-plugin-react": "^7.20.3",
-        "file-loader": "^4.0.0",
-        "html-webpack-plugin": "^4.3.0",
-        "husky": "^4.2.5",
-        "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.14.1",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
-        "react-hot-loader": "^4.12.21",
-        "sass-loader": "^9.0.2",
-        "source-map-loader": "^1.0.1",
-        "style-loader": "^1.2.1",
-        "terser-webpack-plugin": "^3.0.6",
-        "tsconfig-paths-webpack-plugin": "^3.2.0",
-        "tslint": "^6.1.2",
-        "typescript": "^4.0.3",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "@types/codemirror": "5.60.5",
+        "@types/d3": "^7.1.0",
+        "@types/node": "^12.20.37",
+        "@types/react": "^16.14.21",
+        "@types/react-dom": "^16.9.14",
+        "@types/react-router-dom": "^5.3.2",
+        "@types/react-table": "^6.8.9",
+        "@types/socket.io-client": "^1.4.36",
+        "@types/stompjs": "^2.3.5",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
+        "babel-loader": "^8.2.3",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^10.0.0",
+        "css-loader": "^6.5.1",
+        "eslint": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsdoc": "^37.0.3",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-react": "^7.27.1",
+        "html-webpack-plugin": "^5.5.0",
+        "lint-staged": "^12.1.2",
+        "mini-css-extract-plugin": "^2.4.5",
+        "node-sass": "^6.0.1",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
+        "react-hot-loader": "^4.13.0",
+        "sass-loader": "^12.3.0",
+        "source-map-loader": "^3.0.0",
+        "style-loader": "^3.3.1",
+        "terser-webpack-plugin": "^5.2.5",
+        "ts-loader": "^9.2.6",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "typescript": "^4.5.2",
+        "webpack": "^5.64.4",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.6.0"
+    },
+    "lint-staged": {
+        "**/*.{ts,tsx}": "eslint --cache --fix"
     }
 }
