Created separated services for Field Model output 1. De-coupled fieldModel related code from simulation related code. 2. Implemented the functions to plot charts for field model output. 3. Fixed issues that redirecting from other urls to field-model not working. 4. Updated syntax to distinguish simulation and fieldModel code 5. Updated topology render to work with field model datastream. 6. Cleaned code. Todo: 1. Need to figure out what should nominalVoltage be for Field Model data. 2. Need to figure out what to use for the fieldModelId in _stateStore.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -33,7 +33,8 @@
         "strictNullChecks": false,
         "suppressImplicitAnyIndexErrors": true,
         "resolveJsonModule": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "allowSyntheticDefaultImports": true
     },
     "exclude": [
         "node_modules",
